[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
pico-args = { version = "0.5.0", features = ["combined-flags","eq-separator","short-space-opt"] }
libc = "0.2.153"
tungstenite = { version = "0.21.0", features=["default", "__rustls-tls"] }
strum = { version = "0.26.1", features = [
    "std",
    "derive",
    "strum_macros",
    "phf",
] }
base64 = "0.22.0"
rustls = "0.23.1"
rustls-pki-types = "1.3.1"
webpki-roots = "0.26.1"
rcgen = { version = "0.12", features = ["pem", "ring"], default-features = false }
openssl = { version = "0.10.64", features = ["bindgen", "vendored", "default"] }
regex = "1.10.4"
# inline_colorization = "0.1.6"
# openssl = "0.10.64"
