[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
os_info = "3.8.2"


[dependencies]
async-trait = "0.1.77"
pico-args = { version = "0.5.0", features = ["combined-flags","eq-separator","short-space-opt"] }
libc = "0.2.153"
tungstenite = { version = "0.21.0", features=["default", "__rustls-tls"] }
strum = { version = "0.26.1", features = [
    "std",
    "derive",
    "strum_macros",
    "phf",
] }
base64 = "0.22.0"
openssl = { version = "0.10.64", features = ["bindgen", "vendored", "default"] }
regex = "1.10.4"
